--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@
   --primary-color: #1E1E1E;
 }
 body{
-  background-color: #4A051C;
+  background-color: #0F1A20;
 }
 .scroll_bar::-webkit-scrollbar {
   width: 6px;
@@ -21,8 +21,7 @@ body{
   color: #ffffff67;
 }
 .fixtures_scroll::-webkit-scrollbar{
-  width: 7px;
-  background-color: #f39c12;
+  display: none;
 }
 .scroll_bar::-webkit-scrollbar-thumb {
   border-radius: 6px;
