--- a/src/index.css
+++ b/src/index.css
@@ -12,9 +12,10 @@
 :root {
   --primary-color: #1E1E1E;
 }
-body{
+/* body{
   background-color: #000;
-}
+} */
+
 .scroll_bar::-webkit-scrollbar {
   width: 6px;
   background-color: #00000031;
