--- a/src/index.css
+++ b/src/index.css
@@ -2,15 +2,25 @@
 @tailwind components;
 @tailwind utilities;
 
-*,*::after,*::before{
+*,
+*::after,
+*::before {
   font-family: monospace;
   margin: 0;
   padding: 0;
   text-decoration: none;
   /* outline: solid 1px red; */
 }
+.day_style {
+  background-color: #3498db;
+  /* border-radius: 100%; */
+  height: 50px;
+  width: 30px;
+  font-weight: 800;
+  font-size: larger;
+}
 :root {
-  --primary-color: #1E1E1E;
+  --primary-color: #1e1e1e;
 }
 /* body{
   background-color: #000;
@@ -22,7 +32,7 @@
   color: #ffffff67;
 }
 
-.fixtures_scroll::-webkit-scrollbar{
+.fixtures_scroll::-webkit-scrollbar {
   display: none;
 }
 .scroll_bar::-webkit-scrollbar-thumb {
@@ -33,11 +43,11 @@
   border-radius: 8px;
   background-color: #3498db;
 }
-.countries-scroll::-webkit-scrollbar{
+.countries-scroll::-webkit-scrollbar {
   width: 4px;
   /* color: #ffffff67; */
 }
-.countries-scroll::-webkit-scrollbar-thumb{
+.countries-scroll::-webkit-scrollbar-thumb {
   border-radius: 6px;
   background-color: #2a86ff38;
 }
@@ -88,12 +98,12 @@
     opacity: 0.5;
   }
 }
-.country_div{
+.country_div {
   display: flex;
   flex-wrap: wrap;
   gap: 50px;
 }
-.country{
+.country {
   color: #ffffff10;
   width: 300px;
   height: 50px;
@@ -104,20 +114,19 @@
   padding: 10px 20px;
   box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.425);
   border-radius: 5px;
-  transition: .3s;
+  transition: 0.3s;
   text-decoration: none;
 }
-.country:hover{
+.country:hover {
   box-shadow: 0 0 5px 1px black;
-  transition: .3s;
-
+  transition: 0.3s;
 }
-.country_logo{
+.country_logo {
   height: 30px;
   width: 30px;
   border-radius: 30px;
 }
-.country_name_div{
+.country_name_div {
   width: 70%;
   height: 100%;
   overflow: hidden;
@@ -125,14 +134,14 @@
   align-items: center;
   color: black;
 }
-.country_name{
+.country_name {
   width: fit-content;
   height: fit-content;
   white-space: nowrap;
 }
-.country_name:hover{
+.country_name:hover {
   white-space: nowrap;
-  animation: scroll 5s linear ;
+  animation: scroll 5s linear;
 }
 @keyframes scroll {
   0% {
@@ -142,19 +151,19 @@
     transform: translateX(-100%);
   }
 }
-.country_name_header{
+.country_name_header {
   text-align: center;
   margin-bottom: 50px;
 }
-.bg_logo{
+.bg_logo {
   position: absolute;
   width: 100%;
   height: 100%;
-  opacity: .25;
+  opacity: 0.25;
   top: 0;
   z-index: -100;
 }
-.error_div{
+.error_div {
   width: 200px;
   height: 100px;
   border: solid 1px red;
@@ -165,42 +174,42 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
   color: red;
 }
-.up_down_arrow{
+.up_down_arrow {
   height: 30px;
   width: 30px;
   cursor: pointer;
 }
-.hidden{
+.hidden {
   display: none;
 }
-.show{
+.show {
   display: block;
 }
-.caution{
+.caution {
   height: 30px;
   width: 30px;
   margin-right: 10px;
 }
-.players_div{
+.players_div {
   /* outline: solid 5px blue; */
   width: 95%;
   margin: auto;
 }
-.player_div_1{
+.player_div_1 {
   /* background-color: rgba(0, 0, 0, 0.192); */
-  background-color: #1E1E1E;
+  background-color: #1e1e1e;
   color: white;
   padding: 20px;
   border-radius: 5px;
 }
-.player_det_header{
+.player_det_header {
   padding-bottom: 20px;
   color: #f39d12c0;
 }
-.player_div{
+.player_div {
   padding: 20px 30px;
   /* outline: solid 5px green; */
   margin-bottom: 30px;
@@ -213,7 +222,7 @@
   /* align-items: center; */
   /* flex-direction: column; */
 }
-.player_team{
+.player_team {
   margin-bottom: 20px;
   /* background-color: rgba(0, 128, 128, 0.082); */
   /* background-color: rgba(0, 0, 0, 0.192); */
@@ -225,16 +234,16 @@
   border-radius: 5px;
   /* color: blue; */
 }
-.player_image{
+.player_image {
   height: 80px;
   border-radius: 80px;
 }
-.player_image_div{
+.player_image_div {
   display: flex;
   align-items: center;
   gap: 30px;
 }
-.player_details_div{
+.player_details_div {
   margin-top: 30px;
   display: flex;
   gap: 30px;
@@ -242,7 +251,7 @@
   text-align: center;
   flex-wrap: wrap;
 }
-.player_details{
+.player_details {
   /* outline: solid 1px red; */
   padding: 5px 10px;
   border-radius: 5px;
@@ -250,17 +259,15 @@
   /* background-color: rgba(0, 0, 0, 0.096); */
   box-shadow: 0 0 3px 1px #f39d1241;
   /* background-color: rgba(0, 128, 128, 0.082); */
-
-  
 }
 
-.player_details_1{
+.player_details_1 {
   color: grey;
 }
-.table{
+.table {
   margin-bottom: 50px;
 }
-.player_div_2{
+.player_div_2 {
   /* background-color: rgba(0, 0, 0, 0.192); */
   background-color: #1e1e1ead;
   color: white;
