--- a/src/index.css
+++ b/src/index.css
@@ -13,11 +13,14 @@
 }
 .day_style {
   background-color: #3498db;
-  /* border-radius: 100%; */
+  border-radius: 100%;
   height: 50px;
   width: 30px;
   font-weight: 800;
   font-size: larger;
+}
+.date_hover:hover {
+  color: black;
 }
 :root {
   --primary-color: #1e1e1e;
