--- a/src/index.css
+++ b/src/index.css
@@ -13,11 +13,9 @@
 }
 .day_style {
   background-color: #3498db;
-  border-radius: 100%;
-  height: 50px;
-  width: 30px;
+  border-radius: 10px;
   font-weight: 800;
-  font-size: larger;
+  font-size: 16px;
 }
 .date_hover:hover {
   color: black;
